	PR c++/30988 	semantics.c (finish_call_expr): Set current_function_returns_abnormally 	if fn is noreturn FUNCTION_DECL or OVERLOAD with all noreturn 	functions.

* g++.dg/warn/noreturn-4.C: New test.
	* g++.dg/warn/noreturn-5.C: New test.
	* g++.dg/warn/noreturn-6.C: New test.
	* g++.dg/warn/noreturn-7.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130280 138bc75d-0d04-0410-961f-82ee72b054a4